# tictactoe_jeonseo_lee

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_jl6569/: __init__ 1.45.19 PM.py  tictactoe_jl6569.py
tests/: test_tictactoe_jl6569.py
