[tool.poetry]
name = "tictactoe_jl6569"
version = "0.1.0"
description = "MDS HW7"
authors = ["Jeonseo Lee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


